force-app/main/default/objects/Maintenance__c/Maintenance__c.object-meta.xml
<CustomObject>
    <label>Maintenance</label>
    <nameField>
        <displayFormat>#{0}</displayFormat>
        <label>Maintenance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintenance&apos;s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>