force-app/main/default/objects/Maintenance__c/fields/Maintenance_date__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_date__c</fullName>
    <description>Maintenance date</description>
    <label>Maintenance date</label>
    <type>Date</type>
</CustomField>