force-app/main/default/objects/Maintenance__c/fields/Maintenance_due_date__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_due_date__c</fullName>
    <formula>Maintenance_from_date__c + 14</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance due date</label>
    <type>Date</type>
</CustomField>