force-app/main/default/objects/Maintenance__c/fields/Maintenance_from_date__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_from_date__c</fullName>
    <description>Maintenance is available from this date</description>
    <label>Maintenance from date</label>
    <type>Date</type>
</CustomField>