force-app/main/default/objects/Maintenance__c/fields/Maintenance_report__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_report__c</fullName>
    <label>Maintenance report</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>