force-app/main/default/objects/Maintenance__c/fields/Maintenance_Service__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Service__c</fullName>
    <label>Maintenance Service</label>
    <referenceTo>Maintenance_Service__c</referenceTo>
    <relationshipLabel>Maintenance&apos;s</relationshipLabel>
    <relationshipName>Maintenance_s</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>