force-app/main/default/objects/Maintenance__c/fields/Maintenance_status__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_status__c</fullName>
    <label>Maintenance status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>POSTPONED, did not appear for inspection</fullName>
            </value>
            <value>
                <fullName>OK, all good</fullName>
            </value>
            <value>
                <fullName>OK, in-line repair</fullName>
            </value>
            <value>
                <fullName>BAD, capital repair</fullName>
            </value>
            <value>
                <fullName>BAD, only for spare parts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>