force-app/main/default/objects/Maintenance__c/fields/Maintenance_Vehicle_Descriptions__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Vehicle_Descriptions__c</fullName>
    <formula>Vehicle__r.Vehicle_model_description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance Vehicle Descriptions</label>
    <type>Text</type>
</CustomField>