force-app/main/default/objects/Maintenance__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <description>car that was serviced</description>
    <inlineHelpText>car that was serviced</inlineHelpText>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Maintenance&apos;s</relationshipLabel>
    <relationshipName>Maintenance_s</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>