force-app/main/default/objects/Maintenance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Maintenance_date__c</columns>
    <columns>Maintenance_status__c</columns>
    <columns>Maintenance_Vehicle_Descriptions__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>